--- a/app/src/main/res/layout/activity_lista_debitos_cliente.xml
+++ b/app/src/main/res/layout/activity_lista_debitos_cliente.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context="br.com.rm.cfv.activities.cliente.ListaClientesActivity">
 
 
@@ -51,5 +51,15 @@
         </LinearLayout>
 
     </FrameLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAdicionar"
+            android:layout_width="wrap_content"
+            android:layout_height="59dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/recyclerViewItens"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/plus_black_24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
