--- a/app/src/main/res/layout/custom_marker_view.xml
+++ b/app/src/main/res/layout/custom_marker_view.xml
@@ -8,13 +8,13 @@
 
     <TextView
             android:id="@+id/tvContent"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:gravity="center"
             android:padding="8dp"
+            android:maxLines="2"
             android:ellipsize="end"
-            android:singleLine="true"
-            android:text=""
+            android:text="R$ 0,00"
             android:background="@color/bg_black_transparencia"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/white"
