--- a/app/src/main/res/layout/list_view_item_meio_pagamento.xml
+++ b/app/src/main/res/layout/list_view_item_meio_pagamento.xml
@@ -1,36 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:cardCornerRadius="1dp"
-        app:cardElevation="2dp"
-        app:cardUseCompatPadding="true">
+        android:padding="8dp">
 
-    <LinearLayout
+    <ImageView
+            android:id="@+id/imageViewIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="4dp" />
+
+    <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:padding="16dp"
+            android:text="DINHEIRO"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
 
-        <ImageView
-                android:id="@+id/imageViewIcon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:padding="4dp" />
+</LinearLayout>
 
-        <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:text="DINHEIRO"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="@android:color/black"
-                android:textSize="14sp" />
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
 
