--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/primaryColor"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:orientation="vertical"
         android:gravity="bottom">
 
     <ImageView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:background="@drawable/playstore_icon"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="@drawable/logo_app_novo_inline"
             android:scaleType="centerInside"
             android:contentDescription="@string/nav_header_desc"
+            android:layout_gravity="bottom"
             android:id="@+id/imageView"/>
 
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/primaryTextColor"
+            android:textColor="@android:color/white"
             android:text="@string/nav_header_title"
             android:textAllCaps="true"
             android:textStyle="bold"
+            android:padding="8dp"
+            android:textSize="20sp"
+            android:gravity="center|bottom"
+            android:background="@color/bg_black_transparencia"
+            android:layout_gravity="bottom"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
@@ -37,4 +38,4 @@
             android:textSize="12sp"
             android:visibility="gone"/>
 
-</LinearLayout>
+</FrameLayout>
