--- a/app/src/main/res/layout/recycler_view_item_default_2.xml
+++ b/app/src/main/res/layout/recycler_view_item_default_2.xml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="75dip"
+        android:layout_height="70dp"
+        android:layout_margin="4dp"
         app:cardCornerRadius="3dp"
         app:cardElevation="2dp"
-        android:layout_margin="4dp">
+        app:cardPreventCornerOverlap="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dip"
-            android:paddingBottom="8dip">
+            android:layout_height="match_parent">
 
-        <TextView android:id="@+id/textView1"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:text="Nome"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:layout_constraintStart_toStartOf="parent"
-                  android:layout_marginStart="8dp"
-                  android:textSize="18sp"
-                  android:textAllCaps="true"
-                  android:textColor="@android:color/black"/>
+        <ImageView
+                android:id="@+id/imageViewIcon"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/no_image"
+                android:visibility="gone" />
 
-        <TextView android:id="@+id/textView2"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:text="Nome"
-                  android:layout_marginTop="8dp"
-                  app:layout_constraintTop_toBottomOf="@+id/textView1"
-                  app:layout_constraintStart_toStartOf="parent"
-                  android:layout_marginStart="8dp"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingTop="12dp">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nome"
+                    android:textAllCaps="true"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
+            <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="2dp"
+                    android:text="Nome" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
