--- a/app/src/main/res/layout/recycler_view_item_estoque.xml
+++ b/app/src/main/res/layout/recycler_view_item_estoque.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="2dp"
@@ -14,12 +14,12 @@
             android:orientation="vertical">
 
         <ImageView
-                android:id="@+id/imageViewProduto"
+                android:id="@+id/imageViewIcon"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
-                android:src="@drawable/no_image" />
+                android:src="@drawable/no_image"/>
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -31,36 +31,23 @@
                     android:id="@+id/textView1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ellipsize="middle"
                     android:gravity="center"
-                    android:maxLines="2"
-                    android:text="Caderno 10 materias - turma da mônica"
+                    android:text="Produto"
                     android:textAllCaps="true"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
 
             <TextView
-                    android:id="@+id/textViewCodigo"
-                    android:layout_width="match_parent"
-                    android:layout_height="26dp"
-                    android:text="@string/label_codigo"
-                    android:gravity="center"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toEndOf="@+id/imageViewProduto"
-                    app:layout_constraintTop_toBottomOf="@+id/textView1" />
-
-            <TextView
-                    android:id="@+id/textViewSubtotal"
+                    android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="R$ 10,00"
-                    android:textColor="@color/secondaryTextColor"
-                    android:textSize="18sp" />
+                    android:paddingStart="8dp"
+                    android:text="0"
+                    android:textSize="14sp"
+                    android:textStyle="bold"/>
 
         </LinearLayout>
 
     </LinearLayout>
-
 </androidx.cardview.widget.CardView>
